# Serpent

./: .clang-format  CMakeLists.txt  README.md
include/: serpent.hpp
include/serpent/: api.hpp  freelist.hpp  interner.hpp  layout.hpp  stream.hpp  value.hpp
include/serpent/types/: freelist.hpp  interned_map.hpp  interner.hpp  rc.hpp  rc_array.hpp
src/: interner.cpp  layout.cpp  value.cpp
src/types/: interner.cpp
test/: main.cpp
